[project]
name = "congestionmap"
version = "0.1.0"
description = "North.Cloud Congestion Map Project"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]~=0.123",
    "h3~=4.3",
    "pydantic-extra-types~=2.10",
    "pydantic-settings~=2.12",
    "aioboto3~=15.5",
    "python-dotenv~=1.2",
    "types-aioboto3[essential]~=15.5"
]
[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-mock~=3.15",
    "httpx~=0.28",
    "mypy~=1.19",
    "tzdata>=2025.2",
    "boto3-stubs~=1.42",
    "black~=25.11"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true